Feature(GO) APIs - Documentando API com Swagger - Endpoint /users/
