# GO/APIS/internal/infa/webserver/handlers/user_handlers.go
@@ -25,6 +25,17 @@ func NewUserHandler(db database.UserInterface) *UserHandler {
 	}
 }
 
+// GetJWT godoc
+// @Summary         Get a user JWT
+// @Description     Get a user JWT
+// @Tags            users
+// @Accept          json
+// @Produce         json
+// @Param           request   body          dto.GetJWTInput true "user credentials"
+// @Success         200       {object}      dto.GetJwtOutput
+// @Failure         404       {object}      Error
+// @Failure         500       {object}      Error
+// @Router          /users/generate_token   [post]
 func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	jwtExpireIn := r.Context().Value("expireIn").(int)
@@ -36,7 +47,9 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	}
 	u, err := h.UserDB.FindByEmail(user.Email)
 	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
+		w.WriteHeader(http.StatusNotFound)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	if !u.ValidatePassword(user.Password) {
@@ -47,10 +60,8 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 		"sub": u.ID.String(),
 		"exp": time.Now().Add(time.Second * time.Duration(jwtExpireIn)).Unix(),
 	})
-	accessToken := struct {
-		Accesstoken string `json:"access_token"`
-	}{
-		Accesstoken: tokenString,
+	accessToken := dto.GetJwtOutput{
+		AccessToken: tokenString,
 	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
